--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
+<!--
+  Title and Header for the site.
+  We can only use 1 h1 per page
+ -->
 <h1>Team Robinson</h1>
 
 
+<!--
+  This will be navigation.
+  These are all the links.
+-->
 <a href="">Jabari</a>
 <a href="">Lora</a>
 <a href="">Lucy</a>
@@ -9,10 +17,16 @@
 <a href="">Marley</a>
 <a href="">Maya</a>
 
-
+<!--
+  This is a banner/hero image that spans the width of the webpage
+-->
 <img src="TeamRobinson.jpg" alt="Picture of all of us">
 
 
+<!--
+  The main content of the site starts here.
+  This part will be the only piece that changes from page to page.
+-->
 <h2>Who We ARE...</h2>
 
 <p>Team Robinson is a blended family of 7 people + a dog. We are far from what most would consider the average family and we are proud of it...</p>
@@ -34,4 +48,8 @@
 
 <img src="nycall.jpg" alt="Picture of all of us">
 
+
+<!--
+  Footer. This is content for the site's footer
+-->
 <p>We Are the Robinson's</p>
