structue added with HTML

--- a/index.html
+++ b/index.html
@@ -1,37 +1,95 @@
-<h1>Team Robinson</h1>
+<!--
+  Add the basic HTML boilerplate stuff
+-->
+
+<!DOCTYPE HTML>
+<html lang=en-US>
+<head>
+  <!--
+    Add the title for this webpage.
+    Google reads this, and uses it in search result listings
+  s-->
+	<title>Team Robinson</title>
+	<meta charset=UTF-8>
+</head>
+<body>
+
+<table>  <!--   Let's wrap everything inside a table. -->
+  <tbody> <!-- A tbody tag will hold all the conten -->
+    <tr>
+      <td>
+        <!--
+          Title and Header for the site.
+          We can only use 1 h1 per page
+         -->
+        <h1>Team Robinson</h1>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <!--
+          This will be navigation.
+          These are all the links.
+        -->
+        <a href="">Jabari</a>
+        <a href="">Lora</a>
+        <a href="">Lucy</a>
+        <a href="">Jahan</a>
+        <a href="">Mila</a>
+        <a href="">Marley</a>
+        <a href="">Maya</a>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <!--
+          This is a banner/hero image that spans the width of the webpage
+        -->
+        <img src="TeamRobinson.jpg" alt="Picture of all of us">
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <!--
+          The main content of the site starts here.
+          This part will be the only piece that changes from page to page.
+        -->
+        <h2>Who We ARE...</h2>
+
+        <p>Team Robinson is a blended family of 7 people + a dog. We are far from what most would consider the average family and we are proud of it...</p>
 
 
-<a href="">Jabari</a>
-<a href="">Lora</a>
-<a href="">Lucy</a>
-<a href="">Jahan</a>
-<a href="">Mila</a>
-<a href="">Marley</a>
-<a href="">Maya</a>
+        <h2>Meet the TEAM...</h2>
 
 
-<img src="TeamRobinson.jpg" alt="Picture of all of us">
+        <img src="Jabari.jpg" alt="">
+        <img src="Lora.jpg" alt="">
+        <img src="Lucy.jpg" alt="">
+        <img src="Jahan.jpg" alt="">
+        <img src="Mila.jpg" alt="">
+        <img src="Marley.jpg" alt="">
+        <img src="Maya.jpg" alt="">
 
 
-<h2>Who We ARE...</h2>
+        <h2>Family Fun...</h2>
 
-<p>Team Robinson is a blended family of 7 people + a dog. We are far from what most would consider the average family and we are proud of it...</p>
+        <img src="nycall.jpg" alt="Picture of all of us">
+      </td>
+    </tr>
 
+    <tr>
+      <td>
+        <!--
+          Footer. This is content for the site's footer
+        -->
+        <p>We Are the Robinson's</p>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-<h2>Meet the TEAM...</h2>
-
-
-<img src="Jabari.jpg" alt="">
-<img src="Lora.jpg" alt="">
-<img src="Lucy.jpg" alt="">
-<img src="Jahan.jpg" alt="">
-<img src="Mila.jpg" alt="">
-<img src="Marley.jpg" alt="">
-<img src="Maya.jpg" alt="">
-
-
-<h2>Family Fun...</h2>
-
-<img src="nycall.jpg" alt="Picture of all of us">
-
-<p>We Are the Robinson's</p>
+</body>
+</html>
