basic styling done

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   s-->
 	<title>Team Robinson</title>
 	<meta charset=UTF-8>
+
+  <!--  Link to external stylesheet-->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <table>  <!--   Let's wrap everything inside a table. -->
   <tbody> <!-- A tbody tag will hold all the conten -->
-    <tr>
+    <tr class="header">
       <td>
         <!--
           Title and Header for the site.
@@ -26,7 +29,7 @@
       </td>
     </tr>
 
-    <tr>
+    <tr class="navigation">
       <td>
         <!--
           This will be navigation.
@@ -42,7 +45,7 @@
       </td>
     </tr>
 
-    <tr>
+    <tr class="banner">
       <td>
         <!--
           This is a banner/hero image that spans the width of the webpage
@@ -51,7 +54,7 @@
       </td>
     </tr>
 
-    <tr>
+    <tr class="main-content">
       <td>
         <!--
           The main content of the site starts here.
@@ -80,7 +83,7 @@
       </td>
     </tr>
 
-    <tr>
+    <tr class="footer">
       <td>
         <!--
           Footer. This is content for the site's footer
