added a bunch of styles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!--
           This is a banner/hero image that spans the width of the webpage
         -->
-        <img src="TeamRobinson.jpg" alt="Picture of all of us">
+        <img src="img/TeamRobinson.jpg" alt="Picture of all of us">
       </td>
     </tr>
 
@@ -67,19 +67,20 @@
 
         <h2>Meet the TEAM...</h2>
 
-
-        <img src="Jabari.jpg" alt="">
-        <img src="Lora.jpg" alt="">
-        <img src="Lucy.jpg" alt="">
-        <img src="Jahan.jpg" alt="">
-        <img src="Mila.jpg" alt="">
-        <img src="Marley.jpg" alt="">
-        <img src="Maya.jpg" alt="">
+        <ul class="gallery">
+          <li><img src="img/Jabari.jpg" alt=""></li>
+          <li><img src="img/Lora.jpg" alt=""></li>
+          <li><img src="img/Lucy.jpg" alt=""></li>
+          <li><img src="img/Jahan.jpg" alt=""></li>
+          <li><img src="img/Mila.jpg" alt=""></li>
+          <li><img src="img/Marley.jpg" alt=""></li>
+          <li><img src="img/Maya.jpg" alt=""></li>
+        </ul>
 
 
         <h2>Family Fun...</h2>
 
-        <img src="nycall.jpg" alt="Picture of all of us">
+        <p><img class="framed" src="img/nycall.jpg" alt="Picture of all of us"></p>
       </td>
     </tr>
 
