--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         <ul class="gallery">
           <li><img src="img/Jabari.jpg" alt=""></li>
           <li><img src="img/Lora.jpg" alt=""></li>
-          <li><img src="img/Lucy.jpg" alt=""></li>
+          <li><img src="img/lucy.jpg" alt=""></li>
           <li><img src="img/Jahan.jpg" alt=""></li>
           <li><img src="img/Mila.jpg" alt=""></li>
-          <li><img src="img/Marley.jpg" alt=""></li>
-          <li><img src="img/Maya.jpg" alt=""></li>
+          <li><img src="img/marley.jpg" alt=""></li>
+          <li><img src="img/maya.jpg" alt=""></li>
         </ul>
 
 
